--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-select": "^4.0.15",
+    "@types/use-position": "^0.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "typescript": "^4.1.2",
+    "use-position": "^0.0.8",
     "web-vitals": "^1.0.1"
   },
+  "proxy": "https://creativecommons.tankerkoenig.de/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
